# repulsion-theory

./: .gitignore  Python.gitignore  pyproject.toml  train.py
configs/: config.yaml
configs/dataset/: chanales2017_sim1.yaml  chanales2017_sim2.yaml  chanales2021.yaml  default.yaml  favila2016.yaml  guo2021.yaml
configs/evaluation/: chanales2017.yaml  chanales2021.yaml  default.yaml  favila2016.yaml  none.yaml
configs/experiments/: chanales2017_sim1.yaml  chanales2017_sim2.yaml  chanales2021_exp1.yaml  chanales2021_exp3.yaml  chanales2021_exp4.yaml  favila2016.yaml
configs/hydra/launcher/: cpu.yaml  gpu.yaml  local.yaml
configs/items/: chanales2017_exp1.yaml  chanales2017_sim2.yaml  chanales2021_exp1.yaml  chanales2021_exp3.yaml  default.yaml  favila2016.yaml
configs/model/: attention.yaml  complete_model.yaml  dual_stream_linear.yaml  dual_stream_relu.yaml  linear_network.yaml  relu_network.yaml  wide_linear_network.yaml
configs/schedule/: autoencoding_only.yaml  chanales2017.yaml  chanales2021.yaml  chanales2021_exp1.yaml  chanales2021_exp4.yaml  favila2016.yaml  simple.yaml
configs/training/: adam.yaml  sgd.yaml
notebooks/: chanales2017_analysis.ipynb  chanales2021_analysis.ipynb  chanales_2017b_analysis.ipynb  favila_analysis.ipynb
scripts/: chanales_experiments.sh  favila2016.sh
src/: __init__.py
src/repulsion/: __init__.py  conf.py  evaluation.py  schedule.py  torch_data.py  training.py
tests/: test_dataset.py  test_evaluation.py  test_item_generator.py  test_models_and_training.py  test_schedule.py  test_torch_data.py
(+13 files in other folders)
