[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repulsion"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["numpy>=1.24", "hydra-core>=1.3"]

[project.optional-dependencies]
dev = ["pytest>=7", "matplotlib", "seaborn", "jupyter"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
